# website

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml  config.rs  lib.rs
app/public/: main.css
app/routing/: api.rs  mod.rs  page.rs
app/templates/: base.html
blog/: Cargo.toml
cli/: Cargo.toml  main.rs
public/: main.css
src/: config.rs  main.rs
templates/: base.html  index.html  software.html
