[workspace]
resolver = "3"

members = [
	"app",
	"blog",
	"cli"
]

[workspace.dependencies]
anyhow = "1.0.81"
askama = "0.12.1"
axum = "0.7.5"
clap = "4.5.9"
dotenvy = "0.15.7"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

website-app = { version = "0.1.0", path = "app" }
website-blog = { version = "0.1.0", path = "blog" }
